{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 276,
  "lineage": "2373e9c4-12b0-27e0-d2f5-2de244bab68b",
  "resources": [
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:950941368889:instance/i-05a7318f350cdc18e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a7318f350cdc18e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dolev1234",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dceed2c8171b1717"
              }
            ],
            "primary_network_interface_id": "eni-0dceed2c8171b1717",
            "private_dns": "ip-10-0-0-63.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.63",
            "public_ip": "44.199.252.198",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a0b5cc251f656cc5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0453526f28773b278",
            "tags": {
              "Name": "vm_dolev"
            },
            "tags_all": {
              "Name": "vm_dolev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a0ec2e77d2008f4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950941368889",
            "id": "i-05a7318f350cdc18e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_security_group.sg",
            "module.my_infrastructure.aws_subnet.Public-Subnet",
            "module.my_infrastructure.aws_vpc.example",
            "module.my_infrastructure.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:950941368889:instance/i-0e18fa4aa5d96ad5d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e18fa4aa5d96ad5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dolev1234",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04a2b6242d43f0d85"
              }
            ],
            "primary_network_interface_id": "eni-04a2b6242d43f0d85",
            "private_dns": "ip-10-0-1-205.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.205",
            "public_ip": "174.129.94.171",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a4d2c4dd82ed572",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089a1c50b84d97211",
            "tags": {
              "Name": "vm_dolev"
            },
            "tags_all": {
              "Name": "vm_dolev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a0ec2e77d2008f4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950941368889",
            "id": "i-0e18fa4aa5d96ad5d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_security_group.sg",
            "module.my_infrastructure.aws_subnet.Public-Subnet",
            "module.my_infrastructure.aws_vpc.example",
            "module.my_infrastructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950941368889:internet-gateway/igw-0a8ce8b8f4ca76e45",
            "id": "igw-0a8ce8b8f4ca76e45",
            "owner_id": "950941368889",
            "region": "us-east-1",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0e651ae9c896b125e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_infrastructure.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_dolev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950941368889:loadbalancer/app/alb-dolev/a95da14a63fe25f9",
            "arn_suffix": "app/alb-dolev/a95da14a63fe25f9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-dolev-1397906219.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:950941368889:loadbalancer/app/alb-dolev/a95da14a63fe25f9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-dolev",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-08a0ec2e77d2008f4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0453526f28773b278"
              },
              {
                "subnet_id": "subnet-089a1c50b84d97211"
              }
            ],
            "subnets": [
              "subnet-0453526f28773b278",
              "subnet-089a1c50b84d97211"
            ],
            "vpc_id": "vpc-0e651ae9c896b125e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950941368889:loadbalancer/app/alb-dolev/a95da14a63fe25f9"
          },
          "dependencies": [
            "module.my_infrastructure.aws_security_group.sg",
            "module.my_infrastructure.aws_subnet.Public-Subnet",
            "module.my_infrastructure.aws_vpc.example",
            "module.my_infrastructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950941368889:listener/app/alb-dolev/a95da14a63fe25f9/b583e616f6fcbdad",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:950941368889:targetgroup/dolev-tg/564afe91ec14d90f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:950941368889:listener/app/alb-dolev/a95da14a63fe25f9/b583e616f6fcbdad",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:950941368889:loadbalancer/app/alb-dolev/a95da14a63fe25f9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950941368889:listener/app/alb-dolev/a95da14a63fe25f9/b583e616f6fcbdad"
          },
          "dependencies": [
            "module.my_infrastructure.aws_lb.alb_dolev",
            "module.my_infrastructure.aws_lb_target_group.tg",
            "module.my_infrastructure.aws_security_group.sg",
            "module.my_infrastructure.aws_subnet.Public-Subnet",
            "module.my_infrastructure.aws_vpc.example",
            "module.my_infrastructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950941368889:targetgroup/dolev-tg/564afe91ec14d90f",
            "arn_suffix": "targetgroup/dolev-tg/564afe91ec14d90f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:950941368889:targetgroup/dolev-tg/564afe91ec14d90f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dolev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e651ae9c896b125e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:950941368889:targetgroup/dolev-tg/564afe91ec14d90f"
          },
          "dependencies": [
            "module.my_infrastructure.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950941368889:route-table/rtb-04415d7ce1125bdb1",
            "id": "rtb-04415d7ce1125bdb1",
            "owner_id": "950941368889",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e651ae9c896b125e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950941368889",
            "id": "rtb-04415d7ce1125bdb1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950941368889:route-table/rtb-037d9926d9df30ab5",
            "id": "rtb-037d9926d9df30ab5",
            "owner_id": "950941368889",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8ce8b8f4ca76e45",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e651ae9c896b125e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950941368889",
            "id": "rtb-037d9926d9df30ab5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_internet_gateway.gw",
            "module.my_infrastructure.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "con-Private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0666453a76d3ebe19",
            "region": "us-east-1",
            "route_table_id": "rtb-04415d7ce1125bdb1",
            "subnet_id": "subnet-0aca08b6a8552426c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_infrastructure.aws_route_table.rt_Private",
            "module.my_infrastructure.aws_subnet.Private-Subnet",
            "module.my_infrastructure.aws_vpc.example",
            "module.my_infrastructure.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cfefd9dc4bff8b0",
            "region": "us-east-1",
            "route_table_id": "rtb-04415d7ce1125bdb1",
            "subnet_id": "subnet-0c3587fd0341678c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_infrastructure.aws_route_table.rt_Private",
            "module.my_infrastructure.aws_subnet.Private-Subnet",
            "module.my_infrastructure.aws_vpc.example",
            "module.my_infrastructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "con-Public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016144a29c00e3d93",
            "region": "us-east-1",
            "route_table_id": "rtb-037d9926d9df30ab5",
            "subnet_id": "subnet-0453526f28773b278"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_infrastructure.aws_internet_gateway.gw",
            "module.my_infrastructure.aws_route_table.rt_Public",
            "module.my_infrastructure.aws_subnet.Public-Subnet",
            "module.my_infrastructure.aws_vpc.example",
            "module.my_infrastructure.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcb755340ac89f97",
            "region": "us-east-1",
            "route_table_id": "rtb-037d9926d9df30ab5",
            "subnet_id": "subnet-089a1c50b84d97211"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_infrastructure.aws_internet_gateway.gw",
            "module.my_infrastructure.aws_route_table.rt_Public",
            "module.my_infrastructure.aws_subnet.Public-Subnet",
            "module.my_infrastructure.aws_vpc.example",
            "module.my_infrastructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950941368889:security-group/sg-08a0ec2e77d2008f4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a0ec2e77d2008f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_dolev",
            "name_prefix": "",
            "owner_id": "950941368889",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e651ae9c896b125e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950941368889",
            "id": "sg-08a0ec2e77d2008f4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950941368889:subnet/subnet-0aca08b6a8552426c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aca08b6a8552426c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950941368889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0e651ae9c896b125e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950941368889",
            "id": "subnet-0aca08b6a8552426c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_vpc.example",
            "module.my_infrastructure.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950941368889:subnet/subnet-0c3587fd0341678c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3587fd0341678c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950941368889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0e651ae9c896b125e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950941368889",
            "id": "subnet-0c3587fd0341678c3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_vpc.example",
            "module.my_infrastructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950941368889:subnet/subnet-0453526f28773b278",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0453526f28773b278",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950941368889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0e651ae9c896b125e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950941368889",
            "id": "subnet-0453526f28773b278",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_vpc.example",
            "module.my_infrastructure.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950941368889:subnet/subnet-089a1c50b84d97211",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089a1c50b84d97211",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950941368889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0e651ae9c896b125e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950941368889",
            "id": "subnet-089a1c50b84d97211",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_vpc.example",
            "module.my_infrastructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950941368889:vpc/vpc-0e651ae9c896b125e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0daa2fb9612473a21",
            "default_route_table_id": "rtb-0aa66d20af034dcca",
            "default_security_group_id": "sg-05fdd2c3f3b2bed24",
            "dhcp_options_id": "dopt-044aad1674e5dd16e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e651ae9c896b125e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa66d20af034dcca",
            "owner_id": "950941368889",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950941368889",
            "id": "vpc-0e651ae9c896b125e",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}